[package]
name = "vdf-serde"
version = "0.2.0"
authors = ["Melody Horn <melody@boringcactus.com>"]
edition = "2018"
description = "Support for the Valve Data Format for Serde"
documentation = "https://docs.rs/vdf-serde"
readme = "README.md"
repository = "https://git.sr.ht/~boringcactus/vdf-serde"
license = "MIT OR Apache-2.0"
keywords = ["serde", "serialization", "json"]
categories = ["encoding"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
steamy-vdf = "0.2.0"
nom = "^1.2" # don't @ me, steamy-vdf uses it

[dev-dependencies]
version-sync = "0.9.1"
